--- a/MillionAPI/MillionApi.Application/MillionApi.Application.csproj
+++ b/MillionAPI/MillionApi.Application/MillionApi.Application.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\MillionApi.Domain\MillionApi.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.8" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
